--- a/my-app/1-deployment.yaml
+++ b/my-app/1-deployment.yaml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       labels:
-        name:  nginx
+        app:  nginx
     spec:
       containers:
         - image:  nginx:1.25.2
