--- a/my-app/1-deployment.yaml
+++ b/my-app/1-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app:  nginx
     spec:
       containers:
-        - image:  nginx:1.25.2
+        - image:  pblgllgs/hoobank:2.0.0
           name:  nginx
           ports:
             - containerPort: 80
