--- a/my-app/1-deployment.yaml
+++ b/my-app/1-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app:  nginx
     spec:
       containers:
-        - image:  pblgllgs/pod:blue
+        - image:  pblgllgs/pod:green
           name:  nginx
           ports:
             - containerPort: 80
